# dataeng-zoomcamp-final-project

./: .gitignore  README.md  catalog.json  docker-compose.yaml  graph.gpickle  graph_summary.json  main.py  manifest.json  partial_parse.msgpack  pyproject.toml  requirements.txt  run_results.json  test.sql
.github/: build.yml
.github/workflows/: build.yml
dbt/compiled/insurance_marketplace/models/marts/: dim_cost_sharing.sql  dim_metal_level.sql  dim_plan_year.sql  (+1 more)
dbt/insurance-marketplace-dbt/: .gitignore  .user.yml  README.md  catalog.json  dbt_project.yml  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  profiles.yml  run_results.json  sample.profiles.yml
dbt/insurance-marketplace-dbt/models/marts/: dim_cost_sharing.sql  dim_county.sql  dim_county.yml  dim_insurance_type.sql  dim_insurance_type.yml  dim_issuer.sql  dim_issuer.yml  dim_market_type.sql  dim_market_type.yml  dim_metal_level.sql  dim_metal_level.yml  dim_plan_year.sql  dim_plan_year.yml  dim_state.sql  dim_state.yml  fact_insurance_plans.sql  fact_insurance_plans.yml
dbt/insurance-marketplace-dbt/models/staging/: schema.yml  stg_benefits_and_cost_sharing.sql  stg_individual_dental.sql  stg_individual_medical.sql  stg_plan_attributes.sql  stg_rate.sql  stg_service_area.sql  stg_shop_dental.sql  stg_shop_medical.sql
dbt/insurance-marketplace-dbt/seeds/: seed_properties.yml
flows/: 04_gcp_kv.yaml  05_gcp_flow.yaml  06_gcp_puf.yaml  07_gcp_dbt.yaml  08_gcp_scheduled.yaml
notebooks/: analysis.ipynb  analysis2.ipynb
terraform/: .terraform.lock.hcl  main.tf  variables.tf
(+14 files in other folders)
