[project]
name = "dataeng-zoomcamp-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.2"
dependencies = [
    "asttokens==3.0.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "dbt-bigquery>=1.9.1",
    "dbt-core>=1.9.3",
    "dbt-init>=0.2.7",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "ipykernel==6.29.5",
    "ipython==8.34.0",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.2.4",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "platformdirs==4.3.7",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pygments==2.19.1",
    "pyspark==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32==310",
    "pyzmq==26.3.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "wcwidth==0.2.13",
]
